--- a/css/blog-corporatenarratives.css
+++ b/css/blog-corporatenarratives.css
@@ -285,8 +285,10 @@
     right: 0;
     top: 0;
     z-index: 1;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    /* height: 100%; */
+    width: 100vw;
+    /* width: 100%; */
     background-color: #F3F2EE;
     display: flex;
     flex-direction: column;
@@ -296,7 +298,7 @@
     transition: transform 0.5s ease-in;
     writing-mode: horizontal-tb;
     font-size: 1.75rem;
-    margin-top: -7.5vh;
+    /* margin-top: -7.5vh; */
   }
 
   .menu a {
