--- a/css/blog.css
+++ b/css/blog.css
@@ -105,6 +105,7 @@
 
   .mode i:hover {
     opacity: 0.4;
+    /* color: #B450B0; */
   }
 
   .footer {
@@ -127,6 +128,7 @@
 
   footer a:hover {
     opacity: 0.5;
+    /* color:#B450B0; I like this a lot tbh, but it's a minor change, and will take too much time to implement in dark mode. */
   }
 
   .footer-social-link {
@@ -135,7 +137,7 @@
 
   .footer-wording {
     float: right;
-    font-family: cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
 
   .branding {
@@ -161,7 +163,7 @@
     margin-left: -25vw;
     color: #7D8590;
     /* color: #B450B0; */
-    font-family: cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
 
   .gradient-text {
@@ -280,7 +282,7 @@
 
   .blog-date {
     font-size: 0.8rem;
-    font-family: cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: normal;
     /* color: lightgray;
     color: black; */
@@ -345,7 +347,7 @@
 
   html {
     overflow-x: hidden;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
   }
   
   .container {
@@ -465,8 +467,10 @@
     right: 0;
     top: 0;
     z-index: 1;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    /* height: 100%; */
+    width: 100vw;
+    /* width: 100%; */
     background-color: #F3F2EE;
     display: flex;
     flex-direction: column;
@@ -476,7 +480,7 @@
     transition: transform 0.5s ease-in;
     writing-mode: horizontal-tb;
     font-size: 1.75rem;
-    margin-top: -7.5vh;
+    /* margin-top: -7.5vh; */
   }
 
   .menu a {
